crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__define_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/macros.rs
assertion_line: 28
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO 1\nint foo = FOO;\n           |\n           ^\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 10
      },
      "end": {
        "line": 1,
        "character": 13
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 13
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 8
      },
      "end": {
        "line": 0,
        "character": 11
      }
    }
  }
]
