crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_10.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/macros.rs
assertion_line: 191
expression: "goto_definition(r#\"\n%! main.sp\nenum Foo {\n    Foo1,\n}\n#define BAR(%0,%1) view_as<%0>( %1 )\n#define FOO(%0)    BAR( Foo, %0 )\n#define BAZ(%0)    sizeof   %0\n\nvoid bar(int foo, Foo foo2, int foo3, bool foo4  = true) {}\n\nvoid baz() {\n    int foo5 = 0;\n    char foo6[10];\n    bar( foo5, FOO( foo5 ), FOO( foo6 ), .foo4 = foo5 );\n                                           |\n                                           ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 12,
        "character": 42
      },
      "end": {
        "line": 12,
        "character": 46
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 7,
        "character": 38
      },
      "end": {
        "line": 7,
        "character": 55
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 7,
        "character": 43
      },
      "end": {
        "line": 7,
        "character": 47
      }
    }
  }
]
