crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/macros.rs
assertion_line: 79
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO(%1) %1\n#if defined FOO\n             |\n             ^\n#endif\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 12
      },
      "end": {
        "line": 1,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 18
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 8
      },
      "end": {
        "line": 0,
        "character": 11
      }
    }
  }
]
