crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__macros__macro_6.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/macros.rs
assertion_line: 121
expression: "goto_definition(r#\"\n%! main.sp\n#define FOO(%1,%2)    %1 +     %2\nint foo;\nint bar = FOO( foo    , foo )\n                         |\n                         ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 24
      },
      "end": {
        "line": 2,
        "character": 27
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
